Header correct size and spacing

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -59,14 +59,18 @@ html, body {
 		position: absolute;
 		top: 30%;
 		left: 20%;
+
+		h1 {
+			margin-top: 0;
+			font-size: 3.5em;
+		}
 	}
 
 	.find-out-more-link {
-		padding: 10px;
-		border: 1px solid white;
-		position: absolute;
-		top: 50%;
-		left: 20%;
+		a {
+			border: 1px solid white;
+			padding: 10px;
+		}
 	}
 }
 
